tests/expansion.err

####################
# Slices
fish: Invalid index value
echo "$foo[d]"
           ^
fish: Invalid index value
echo $foo[d]
          ^
fish: Invalid index value
echo ()[d]
        ^

####################
# Percent self

####################
# Catch your breath
fish: $) is not a valid variable in fish.
echo $$paren
      ^

####################
# Test tilde expansion

####################
# Test path variables

####################
# Test fatal syntax errors
fish: $, is not a valid variable in fish.
echo $,foo
      ^
fish: Unexpected end of string, incomplete parameter expansion
echo {
     ^

fish: Unexpected '}' for unopened brace expansion
echo {}}
       ^

fish: Command substitutions not allowed
command (asd)
        ^
